# DVMUnpacker

./: .gitignore  README.md  settings.gradle
artunpacker/: build.gradle
artunpacker/src/main/: AndroidManifest.xml
artunpacker/src/main/cpp/: CMakeLists.txt
artunpacker/src/main/cpp/src/: Unpacker.cpp  Unpacker.h  art.cpp  base.h  cast.cpp  cast.h  dex_ratel.h  dlfcn_nougat.cpp  native_api.cpp  native_api.h
artunpacker/src/main/cpp/src/inlinehook_32/: inlineHook.cpp  inlineHook.h  relocate.cpp  relocate.h
artunpacker/src/main/cpp/src/inlinehook_64/: And64InlineHook.cpp
artunpacker/src/main/java/com/virjar/artunpacker/: ArtMethodSizeTest.java  ArtUnPacker.java  SandHookMethodResolver.java
artunpacker/src/main/res/layout/: activity_main.xml
artunpacker/src/main/res/values/: strings.xml
baksmali/: build.gradle
baksmali/src/main/java/com/virjar/baksmalisrc/baksmali/: Baksmali.java
commons/src/main/java/com/virjar/dvmunpacker/commons/: Constants.java
moduleloader/: build.gradle
moduleloader/src/main/: AndroidManifest.xml
moduleloader/src/main/assets/: xposed_init
moduleloader/src/main/java/com/virjar/dvmunpacker/moduleloader/: LoaderEntry.java  MainActivity.java
moduleloader/src/main/res/values/: strings.xml
unpacker/: build.gradle  multidex-config.pro  proguard-rules.pro
unpacker/src/main/: AndroidManifest.xml
unpacker/src/main/cpp/: CMakeLists.txt
unpacker/src/main/cpp/src/unpack/: init.cpp  init.h  shell_version3.cpp
unpacker/src/main/java/com/virjar/dvmunpacker/unpacker/: MainActivity.java  SharedObject.java  UnPackerEntry.java
(+10 files in other folders)
